--- a/.github/workflows/codeigniter.yml
+++ b/.github/workflows/codeigniter.yml
@@ -58,6 +58,13 @@ jobs:
         database.tests.DBPrefix:  
         CI_ENVIRONMENT: development
         app.baseURL: 'http://127.0.0.1:8080/'
+        database.default.hostname: 127.0.0.1
+        database.default.database: ci4_test
+        database.default.username: root
+        database.default.password: root
+        database.default.DBDriver: MySQLi
+        database.default.DBPrefix:
+        database.default.port: 3306
         CLIENT_ID: ${{ secrets.CLIENT_ID }}
         TENANT_ID: ${{ secrets.TENANT_ID }}
         CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
