--- a/.github/workflows/codeigniter.yml
+++ b/.github/workflows/codeigniter.yml
@@ -59,7 +59,7 @@ jobs:
         CI_ENVIRONMENT: development
         app.baseURL: 'http://127.0.0.1:8080/'
         database.default.hostname: 127.0.0.1
-        database.default.database: ci4_test
+        database.default.database: ci4
         database.default.username: root
         database.default.password: root
         database.default.DBDriver: MySQLi
@@ -70,4 +70,7 @@ jobs:
         CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
         GRAPH_USER_SCOPES: ${{ secrets.GRAPH_USER_SCOPES }}
         REDIRECT_URI: ${{ secrets.REDIRECT_URI }}
-      run: vendor/bin/phpunit
+      run: 
+        - vendor/codeigniter4/framework/spark migrate -n Stock
+        - vendor/codeigniter4/framework/spark migrate -n User
+        - vendor/bin/phpunit
