--- a/.github/workflows/codeigniter.yml
+++ b/.github/workflows/codeigniter.yml
@@ -30,6 +30,7 @@ jobs:
         env:
           MYSQL_DATABASE: ci4
           MYSQL_ROOT_PASSWORD: root
+          MYSQL_TCP_PORT: 3307
         ports:
           - 3307:3307
         options: --health-cmd="mariadb-admin ping --port=3307" --health-interval=10s --health-timeout=5s --health-retries=3
