--- a/.github/workflows/codeigniter.yml
+++ b/.github/workflows/codeigniter.yml
@@ -79,5 +79,5 @@ jobs:
         CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
         GRAPH_USER_SCOPES: ${{ secrets.GRAPH_USER_SCOPES }}
         REDIRECT_URI: ${{ secrets.REDIRECT_URI }}
-      run: php spark migrate -n Stock && php spark migrate -n User &&\
+      run: php spark migrate -n Stock && php spark migrate -n User &&
         vendor/bin/phpunit
